# track_forgex

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devenv.nix  mix.exs
.github/workflows/: elixir.yml  release.yml
lib/: native.ex  track_forgex.ex  utils.ex
lib/trackers/: byte_track.ex  bytetrack.ex
lib/trackers/byte_track/: detection_result.ex  settings.ex
native/TrackForgex/: Cargo.toml
native/TrackForgex/src/: lib.rs
native/track_forgex/: Cargo.toml  README.md
native/track_forgex/.cargo/: config.toml
native/track_forgex/src/: lib.rs
test/: byte_track_test.exs  native_test.exs  track_forgex_test.exs
