[package]
name = "track_forgex"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.2"
trackforge = "0.1.8"