[package]
name = "track_forgex"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.2", default-features = false, features = ["derive"] }
trackforge = "0.1.8"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
